<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buku Tamu"
        android:textColor="#493628"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan nama tamu"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:drawablePadding="10dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tambah Tamu"
        android:textSize="16sp"
        android:backgroundTint="#66785F"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp"
        android:padding="14dp"
        android:layout_gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        />
</LinearLayout>
