<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/txtGuestName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Nama Tamu"
        android:textSize="18sp"
        android:padding="8dp"
        android:ellipsize="end"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C62E2E"
        android:text="Hapus"
        android:layout_marginStart="8dp"/>

</LinearLayout>
